--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "csv": "^6.2.7",
     "csv-parser": "^3.0.0",
-    "csv-writer": "^1.6.0"
+    "path-to-regexp": "^6.2.1",
+    "querystring": "^0.2.1"
   }
 }
