--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "csv": "^6.2.7",
-    "csv-parser": "^3.0.0",
-    "path-to-regexp": "^6.2.1",
-    "querystring": "^0.2.1"
+    "csv-parser": "^3.0.0"
   }
 }
