--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
-  "scripts": {
-    "server": "node --watch src/server.js"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "keywords": [],
+  "main": "test.js",
+  "scripts": {
+    "server": "node --watch src/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "dependencies": {
     "csv": "^6.2.7",
     "csv-parser": "^3.0.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.27",
+    "eslint": "^8.51.0",
+    "prettier": "^3.0.3"
   }
 }
