--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   "keywords": [],
   "main": "test.js",
   "scripts": {
-    "server": "node --watch src/server.js",
+    "server": "tsx watch src/server.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "fmt": "prettier --write \"**/*.{ts,vue,css,html}\""
   },
   "dependencies": {
     "csv": "^6.2.7",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "fastify": "^4.24.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.27",
+    "@types/node": "^20.8.7",
     "eslint": "^8.51.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "tsx": "^3.14.0",
+    "typescript": "^5.2.2"
   }
 }
