--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "keywords": [],
   "main": "test.js",
   "scripts": {
-    "server": "tsx watch src/server.ts",
+    "server": "tsx watch src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "fmt": "prettier --write \"**/*.{ts,vue,css,html}\""
   },
   "dependencies": {
+    "@fastify/cors": "^8.4.0",
     "csv": "^6.2.7",
     "csv-parser": "^3.0.0",
     "fastify": "^4.24.3"
