--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fastify/cors": "^8.4.0",
     "csv": "^6.2.7",
     "csv-parser": "^3.0.0",
-    "fastify": "^4.24.3"
+    "fastify": "^4.24.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.27",
     "@types/node": "^20.8.7",
+    "@types/uuid": "^9.0.6",
     "eslint": "^8.51.0",
     "prettier": "^3.0.3",
     "tsx": "^3.14.0",
