--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "keywords": [],
   "main": "test.js",
   "scripts": {
-    "server": "tsx watch src/app.ts",
+    "server": "tsx watch --env-file=.env src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "fmt": "prettier --write \"**/*.{ts,vue,css,html}\""
@@ -18,6 +18,7 @@
     "csv": "^6.2.7",
     "csv-parser": "^3.0.0",
     "fastify": "^4.24.3",
+    "mongoose": "^7.6.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^20.8.7",
     "@types/uuid": "^9.0.6",
     "eslint": "^8.51.0",
+    "pino-pretty": "^10.2.3",
     "prettier": "^3.0.3",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
